<resources>
    <string name="app_name">Smart Home</string>
    <string name="home_button_get_info">Получить информацию</string>
    <string name="settings_button_update">Обновить</string>
    <string name="information_standard_text">Нет информации</string>

    <string name="temperature_button_update">Обновить</string>
    <string name="temperature_date">Время:</string>
    <string name="temperature_button_back">Закрыть</string>

    <string name="conditioner_button_offOn">Включить/Выключить</string>
    <string name="conditioner_button_add">Увеличить температуру</string>
    <string name="conditioner_button_reduce">Уменьшить температуру</string>

    <string name="settings_button_confirm">Сохранить изменения</string>
    <string name="settings_label">Автоматическое обновление (мин):</string>
    <string name="settings_more">Дополнительные настройки</string>
    <string name="settings_button_connect">Подключить</string>
    <string name="settings_button_disconnect">Отключиться</string>
    <string name="settings_connect_title">Для того, чтобы начать пользоваться приложением, подключите устройство к локальной сети</string>
    <string name="settings_connected">Соединено</string>
    <string name="settings_fail">Ошибка подключения</string>

    <string name="information_empty_view">Нет данных\nПроверьте подключение к системе</string>

    <string name="error_connection">Подключитесь к системе</string>

    <string name="system_min_temp">Минимальная\nтемпература\n(°C)</string>
    <string name="system_max_temp">Максимальная\nтемпература\n (°C)</string>
    <string name="system_min_humidity">Минимальная\nвлажность\n(%)</string>
    <string name="system_max_humidity">Максимальная\nвлажность\n(%)</string>
    <string name="system_choose_min_temperature">Мин. температура</string>
    <string name="system_choose_max_temperature">Макс. температура</string>
    <string name="system_choose_min_humidity">Мин. влажность</string>
    <string name="system_choose_max_humidity">Макс. влажность</string>
    <string name="system_choose_timer">Таймер</string>
    <string name="system_choose_title">Выберите, что будет оборажаться на индикаторах:</string>
    <string name="system_cancel_all"><u>Отменить все настройки</u></string>

    <string name="notification_min_temp">Температура на датчике (id: %1$d) ниже комфортной (%2$d°C)</string>
    <string name="notification_max_temp">Температура на датчике (id: %1$d) выше комфортной (%2$d°C)</string>
    <string name="notification_min_hum">Влажность на датчике (id: %1$d) ниже комфортной (%2$d%%)</string>
    <string name="notification_max_hum">Влажность на датчике (id: %1$d) выше комфортной (%2$d%%)</string>
    <string name="notification_title">Проблемы с климатом</string>

    <string name="connect_device_title">Подключение устройства по сети Wi-Fi</string>
    <string name="connect_device_text">Для подключения устройства Вы должны быть подключены к своей домашней сети. Также необходимо включить геолокацию в настройках вашего мобильного устройства.</string>
    <string name="connection_device_ip">Подключение по IP</string>
    <string name="connection_remote_control">Добавить пульт</string>
    <string name="connect_device_next">Далее</string>
    <string name="connect_device_error">Убедитесь, что Вы подключены к сети Wi-Fi</string>
    <string name="connect_device_connection_error">Убедитесь в правильности данных и повторите попытку</string>
    <string name="connect_device_network_ssid">Название сети</string>
    <string name="connect_device_network_password">Пароль от сети:</string>
    <string name="connect_device_ip_of_device">Введите IP в локальной сети устройства, которое хотите подключить (формат: 255.255.255.255):</string>
    <string name="connect_device_cond">Кондиционер</string>
    <string name="connect_device_hum">Увлажнитель воздуха</string>
    <string name="connect_device_type">Выберите тип и бренд\nподключаемого устройства</string>
    <string name="connect_device_success">Устройство было подключено</string>
    <string name="connect_device_error_data">Проверьте правильноcть данных</string>
    <string name="connect_device_connect">Подключить</string>
    <string name="connect_device_error_send_config">Не удалось отправить конфигурацию в систему</string>
    <string name="connect_device_error_ip_format">Неправильный формат IP</string>

    <string name="remote_control_type">Выберите тип подключаемого устройства и\nкоманду для записи.\nПосле выбора наведите\nпульт от устройства и нажмите необходимую кнопку.</string>
    <string name="remote_control_on">Записать команду включения</string>
    <string name="remote_control_off">Записать команду выключения</string>
    <string name="remote_control_add_temp">Записать команду повышения температуры</string>
    <string name="remote_control_reduce_temp">Записать команду понижения температуры</string>
    <string name="remote_control_success">Команда успешно записана</string>
    <string name="remote_control_error">Что-то пошло не так. Повторите попытку</string>

    <string name="chart_graph_temp">График температуры</string>
    <string name="chart_graph_hum">График влажности</string>
    <string name="chart_graph_pressure">График давления</string>
    <string name="chart_choose_date">Выбрать дату</string>

    <string name="main_double_click_exit">Для выхода из приложения нажмите кнопку \"Назад\" еще раз</string>

    <string name="permission_geo_title">Доступ к местоположению</string>
    <string name="permission_storage_title">Доступ к хранилищу</string>
    <string name="permission_already_permited">Разрешение получено</string>
    <string name="permission_accept">Разрешить</string>
    <string name="permission_dismiss">Больше не спрашивать</string>
    <string name="permission_cancel">Отменить</string>
    <string name="permission_manual">Настроить</string>
    <string name="permission_storage">Разрешите доступ к хранилищу, чтобы иметь возможность сохранять данные</string>
    <string name="request_permission_never_ask">Чтобы функционал был доступен, необходимо дать разрешение. В прошлый раз вы отклонили запрос, поэтому придется сделать это вручную</string>
    <string name="request_permission_never_ask_storage">Для чтения и записи сохраненных файлов, необходимо дать на это разрешение. В прошлый раз вы отклонили запрос, поэтому придется сделать это вручную</string>
    <string name="permission_geo">Приложение собирает данные о местоположении, даже когда оно закрыто или не используется. Чтобы поддерживать работу функций: подключение к Wi-Fi, поиск устройств и отображение сохраненных Wi-Fi сетей, необходимо дать разрешение.</string>
</resources>