<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="40dp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        style="@style/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/connect_device_title"
        app:layout_constraintEnd_toEndOf="@id/icon"
        app:layout_constraintStart_toStartOf="@id/icon"
        app:layout_constraintTop_toBottomOf="@id/icon" />

    <TextView
        android:id="@+id/text"
        style="@style/Text.Gray"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/connect_device_text"
        app:layout_constraintEnd_toEndOf="@id/title"
        app:layout_constraintStart_toStartOf="@id/title"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/next"
        style="@style/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:background="@drawable/rounded_button"
        android:text="@string/connect_device_next"
        app:layout_constraintTop_toBottomOf="@id/text" />

    <TextView
        android:id="@+id/by_ip"
        style="@style/Text.Gray"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/connection_device_ip"
        app:layout_constraintEnd_toEndOf="@id/next"
        app:layout_constraintStart_toStartOf="@id/next"
        app:layout_constraintTop_toBottomOf="@id/next" />


</androidx.constraintlayout.widget.ConstraintLayout>