<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/dark1">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/ic_conditioner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/offOn"
        style="@style/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/bg_menu_button"
        android:text="@string/conditioner_button_offOn"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/icon" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/add"
        style="@style/additionalButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_menu_button"
        android:padding="10dp"
        android:text="@string/conditioner_button_add"
        android:textStyle="bold"

        app:layout_constraintTop_toBottomOf="@id/offOn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/reduce"
        style="@style/additionalButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/bg_menu_button"
        android:text="@string/conditioner_button_reduce"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/add" />


    <TextView
        android:id="@+id/close"
        style="@style/Text.Gray"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="?attr/selectableItemBackground"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/temperature_button_back"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/reduce" />


</androidx.constraintlayout.widget.ConstraintLayout>