<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/dark1">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/ic_pressure"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_date"
        style="@style/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:text="@string/temperature_date"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/icon"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/date"
        style="@style/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="25dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/label_date"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/value"
        style="@style/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toEndOf="@+id/icon"
        app:layout_constraintTop_toBottomOf="@id/label_date" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/update"
        style="@style/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/bg_menu_button"
        android:text="@string/settings_button_update"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/icon" />

    <TextView
        android:id="@+id/close"
        style="@style/Text.Gray"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="?attr/selectableItemBackground"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/temperature_button_back"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/update" />


</androidx.constraintlayout.widget.ConstraintLayout>